WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218770
REGRESSION (
r269348
): ASSERTION FAILED: !m_messageReceiverMapCount under WebKit::SpeechRecognitionServer::~SpeechRecognitionServer
https://bugs.webkit.org/show_bug.cgi?id=218770
Summary
REGRESSION (r269348): ASSERTION FAILED: !m_messageReceiverMapCount under WebK...
Ryan Haddad
Reported
2020-11-10 13:17:15 PST
Seeing the following assertion failure attributed to various tests on iOS and macOS debug bots: ASSERTION FAILED: !m_messageReceiverMapCount /Volumes/Data/slave/catalina-debug/build/Source/WebKit/Platform/IPC/MessageReceiver.h(40) : virtual IPC::MessageReceiver::~MessageReceiver() 1 0x109eeae29 WTFCrash 2 0x11179f48b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1117d7dd8 IPC::MessageReceiver::~MessageReceiver() 4 0x111f29005 WebKit::SpeechRecognitionServer::~SpeechRecognitionServer()
https://results.webkit.org/?suite=layout-tests&test=fast%2Ftable%2Fcrash-splitColumn-3.html
https://results.webkit.org/?suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fstreams%2Fpiping%2Fabort.any.worker.html
Attachments
crash log
(98.72 KB, text/plain)
2020-11-10 13:17 PST
,
Ryan Haddad
no flags
Details
Patch
(1.59 KB, patch)
2020-11-10 21:22 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2020-11-10 13:17:31 PST
Created
attachment 413728
[details]
crash log
Ryan Haddad
Comment 2
2020-11-10 13:18:28 PST
Based on test history, I think this started with
https://trac.webkit.org/changeset/269348/webkit
Radar WebKit Bug Importer
Comment 3
2020-11-10 13:18:53 PST
<
rdar://problem/71252234
>
Sihui Liu
Comment 4
2020-11-10 21:20:12 PST
17 com.apple.WebKit 0x000000010f7e3e2c WebKit::WebProcessProxy::~WebProcessProxy() + 764 (WebProcessProxy.cpp:256) 18 com.apple.WebKit 0x000000010f7e44f5 WebKit::WebProcessProxy::~WebProcessProxy() + 21 (WebProcessProxy.cpp:256) 19 com.apple.WebKit 0x000000010f7e457c WebKit::WebProcessProxy::~WebProcessProxy() + 28 (WebProcessProxy.cpp:227) 20 com.apple.WebKit 0x000000010f44ba84 WTF::ThreadSafeRefCounted<WebKit::WebProcessProxy, (WTF::DestructionThread)0>::deref() const::'lambda'()::operator()() const + 52 (ThreadSafeRefCounted.h:118) 21 com.apple.WebKit 0x000000010f44ba1d WTF::ThreadSafeRefCounted<WebKit::WebProcessProxy, (WTF::DestructionThread)0>::deref() const + 61 (ThreadSafeRefCounted.h:136)
Sihui Liu
Comment 5
2020-11-10 21:22:06 PST
Created
attachment 413774
[details]
Patch
EWS
Comment 6
2020-11-11 11:12:58 PST
Committed
r269691
: <
https://trac.webkit.org/changeset/269691
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 413774
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug