REGRESSION (r269348): ASSERTION FAILED: !m_messageReceiverMapCount under WebKit::SpeechRecognitionServer::~SpeechRecognitionServer https://bugs.webkit.org/show_bug.cgi?id=218770 <rdar://problem/71252234>

Reviewed by Youenn Fablet.

Remove SpeechRecognitionServer from MessageReceiverMap before it is destroyed.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::~WebProcessProxy):


Canonical link: https://commits.webkit.org/231470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269691 268f45cc-cd09-0410-ab3c-d52691b4dbfc